--- a/k8s/daemonset.yaml
+++ b/k8s/daemonset.yaml
@@ -20,7 +20,7 @@ spec:
       hostPID: true
       restartPolicy: Always
       containers:
-      - image: patnaikshekhar/node-installer:1.3
+      - image: divyangjp/noderunner:1.0
         name: installer
         securityContext:
           privileged: true
